--- a/movies.html
+++ b/movies.html
@@ -117,7 +117,7 @@
                             <h2 class="title">Spooked</h2>
 
                             <span class="categories">
-                                <span>Pre-Production</span>
+                                <span>Comedy, Drama / Pre-Production</span>
                             </span>
                         </a>
 
@@ -135,7 +135,7 @@
                             <h2 class="title">Joy</h2>
 
                             <span class="categories">
-                                <span>Pre-Production</span>
+                                <span>Thriller / Pre-Production</span>
                             </span>
                         </a>
 
@@ -153,7 +153,7 @@
                             <h2 class="title">Love In The City</h2>
 
                             <span class="categories">
-                                <span>Romance,Comedy</span>
+                                <span>Romance, Comedy</span>
                             </span>
                         </a>
 
@@ -171,8 +171,7 @@
                             <h2 class="title">I See Darkness</h2>
 
                             <span class="categories">
-                                <span>Thriller</span>,
-                                <span>Drama</span>
+                                <span>Thriller, Drama</span>
                             </span>
                         </a>
 
@@ -226,8 +225,7 @@
                             <h2 class="title">The Job</h2>
 
                             <span class="categories">
-                                <span>Comedy</span>,
-                                <span>Crime</span>
+                                <span>Comedy, Crime</span>,
                             </span>
                         </a>
 
@@ -245,8 +243,7 @@
                             <h2 class="title">Despair</h2>
 
                             <span class="categories">
-                                <span>Drama</span>,
-                                <span>Thriller</span>
+                                <span>Drama, Thriller</span>,
                             </span>
                         </a>
 
