--- a/contact.html
+++ b/contact.html
@@ -101,16 +101,16 @@
     </header>
     <!-- End Header -->
     <!-- Begin Main -->
-    <main class="page extra-padding">
+    <main class="contact"" class="page extra-padding">
         <div class="inner-container">
 
             <!-- <h1 class="page-header">Contact Me</h1> -->
 
-            <center>
+            
             <p>If you have a question or just want to say hi drop me a message at hank@hankorion.com and I’ll get back to you as soon as I can :)</p>
             <p>If you want to sponsor my YouTube videos please email at sponsorship@hankorion.com</p>
-            <p>Disclaimer: Please don't send me unsolicited material<br> including scripts, films, ideas, concepts etc. <br>Thank you for understanding.</p>
-          </center>
+            <p>Disclaimer: Please don't send me unsolicited material including scripts, films, ideas, concepts etc. Thank you for understanding.</p>
+         
 
 
             <span class="divider20"></span>
