--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
             <ul class="slides">
                 <li style="background-image:url('images/index_1.jpg');">
-                    <span class="image-caption">Just a guy, following his dream.</span>
+                    <!-- <span class="image-caption">New movie coming soon.</span> -->
                 </li>
                 <li style="background-image:url('images/index.jpg');">
-                    <span class="image-caption">Just a guy, following his dream.</span>
+                    <!-- <span class="image-caption">Just a guy, following his dream.</span> -->
                 </li>
             </ul>
             <!-- <div class="nav">
