--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
         <!-- End Mobile Nav Icon -->
     
         <!-- Begin Navigation -->
-        <nav style="
-        width: 100%;
-         margin: auto;">
+        <nav class="nav-bar">
             <ul>
                 <li>
                     <a class="active" href="./">HOME</a>
