--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
     <!-- Begin Loader -->
     <div class="preloader">
-        <p>GET IN TOUCH</p>
+        <!-- <p>GET IN TOUCH</p> -->
         <span class="circle"></span>
     </div>
     <!-- End Loader -->
