--- a/movies.html
+++ b/movies.html
@@ -74,7 +74,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>FILMOGRAPHY</p>
+      <!-- <p>FILMOGRAPHY</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
