--- a/reads.html
+++ b/reads.html
@@ -60,7 +60,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>BOOKS</p>
+      <!-- <p>BOOKS</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
