--- a/store.html
+++ b/store.html
@@ -75,7 +75,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>Welcome to the Store</p>
+      <!-- <p>Welcome to the Store</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
