--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
     <!-- Begin Loader -->
     <div class="preloader">
-        <p>ABOUT HANK</p>
+        <!-- <p>ABOUT HANK</p> -->
         <span class="circle"></span>
     </div>
     <!-- End Loader -->
