--- a/courses.html
+++ b/courses.html
@@ -75,7 +75,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>LEARN INDIE FILMMAKING</p>
+      <!-- <p>LEARN INDIE FILMMAKING</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
