--- a/movies.html
+++ b/movies.html
@@ -154,7 +154,7 @@
             </div>
           </article> -->
 
-          <article>
+          <!-- <article>
             <div class="article-wrapper">
               <a href="following.html">
                 <figure>
@@ -163,9 +163,9 @@
                 </figure>
               </a>
             </div>
-          </article>
+          </article> -->
 
-          <article>
+          <!-- <article>
             <div class="article-wrapper">
               <a href="osaka.html">
                 <figure>
@@ -174,7 +174,7 @@
                 </figure>
               </a>
             </div>
-          </article>
+          </article> -->
 
           <article>
             <div class="article-wrapper">
