--- a/how-to-be-a-movie-director.html
+++ b/how-to-be-a-movie-director.html
@@ -188,27 +188,33 @@
                 navigating creative and logistical challenges, this course is
                 designed to prepare you for the demands of the film industry.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>1 hour downloadable video</li>
+
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>1 hour downloadable video</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>Do You Need To Go To Film School</li>
-                <li>What Does A Film Director Do</li>
-                <li>Adapting To Independent Director's Life</li>
-                <li>Letting Go Of Your Fears</li>
-                <li>Projecting The Right Energy</li>
-                <li>Dealing With Negativity</li>
-                <li>Dealing With Outside Pressure</li>
-                <li>Keeping Up The Image</li>
-                <li>Working With Actors</li>
-                <li>Working With Crew</li>
-                <li>Knowing Your Departments</li>
-                <li>Networking</li>
-                <li>Do You Need An Agent?</li>
-                <li>Ego Problems</li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ Do You Need To Go To Film School</li>
+                  <li>✅ What Does A Film Director Do</li>
+                  <li>✅ Adapting To Independent Director's Life</li>
+                  <li>✅ Letting Go Of Your Fears</li>
+                  <li>✅ Projecting The Right Energy</li>
+                  <li>✅ Dealing With Negativity</li>
+                  <li>✅ Dealing With Outside Pressure</li>
+                  <li>✅ Keeping Up The Image</li>
+                  <li>✅ Working With Actors</li>
+                  <li>✅ Working With Crew</li>
+                  <li>✅ Knowing Your Departments</li>
+                  <li>✅ Networking</li>
+                  <li>✅ Do You Need An Agent?</li>
+                  <li>✅ Ego Problems</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
