--- a/how-to-design-a-movie-poster.html
+++ b/how-to-design-a-movie-poster.html
@@ -192,25 +192,31 @@
                 design a poster that will grab attention and drive viewers to
                 your film.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>1 hour downloadable video</li>
-                <li>3 downloadable resources</li>
+
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>1 hour downloadable video</li>
+                  <li>3 downloadable resources</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>Why Great Poster Is Important</li>
-                <li>What Makes A Great Movie Poster</li>
-                <li>Where To Get Images For Your Film Poster</li>
-                <li>How To Create A Great Looking Film Poster Base</li>
-                <li>Creating A Great Main Movie Title</li>
-                <li>How To Create Lower Credits</li>
-                <li>Final Touches Before Exporting</li>
-                <li>Exporting Your Work</li>
-                <li>
-                  How To Resize Your Poster To Other Networks Requirements
-                </li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ Why Great Poster Is Important</li>
+                  <li>✅ What Makes A Great Movie Poster</li>
+                  <li>✅ Where To Get Images For Your Film Poster</li>
+                  <li>✅ How To Create A Great Looking Film Poster Base</li>
+                  <li>✅ Creating A Great Main Movie Title</li>
+                  <li>✅ How To Create Lower Credits</li>
+                  <li>✅ Final Touches Before Exporting</li>
+                  <li>✅ Exporting Your Work</li>
+                  <li>
+                    ✅ How To Resize Your Poster To Other Networks Requirements
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
