--- a/how-to-edit-a-feature-film.html
+++ b/how-to-edit-a-feature-film.html
@@ -192,29 +192,35 @@
                 experienced filmmaker looking to hone your skills, this course
                 has something for everyone.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>2.5 hours downloadable video</li>
-                <li>3 downloadable resources</li>
+
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>2.5 hours downloadable video</li>
+                  <li>3 downloadable resources</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>Organizing Folders And Bins</li>
-                <li>Preparing Your Footage For Edit</li>
-                <li>Importing Files To Premiere Pro</li>
-                <li>Creating A Timeline</li>
-                <li>Creating Closing Credits Roll</li>
-                <li>Creating Film Opening Sequence</li>
-                <li>Editing Your Film</li>
-                <li>Locking Your Picture</li>
-                <li>Exporting Film To Color Grade In Davinci Resolve</li>
-                <li>iZotope RX Mastering</li>
-                <li>Preparing For Final Render</li>
-                <li>Rendering Your Master</li>
-                <li>Creating Other Delivery Formats</li>
-                <li>Let's Talk About Subtitles</li>
-                <li>How To Create a DCP</li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ Organizing Folders And Bins</li>
+                  <li>✅ Preparing Your Footage For Edit</li>
+                  <li>✅ Importing Files To Premiere Pro</li>
+                  <li>✅ Creating A Timeline</li>
+                  <li>✅ Creating Closing Credits Roll</li>
+                  <li>✅ Creating Film Opening Sequence</li>
+                  <li>✅ Editing Your Film</li>
+                  <li>✅ Locking Your Picture</li>
+                  <li>✅ Exporting Film To Color Grade In Davinci Resolve</li>
+                  <li>✅ iZotope RX Mastering</li>
+                  <li>✅ Preparing For Final Render</li>
+                  <li>✅ Rendering Your Master</li>
+                  <li>✅ Creating Other Delivery Formats</li>
+                  <li>✅ Let's Talk About Subtitles</li>
+                  <li>✅ How To Create a DCP</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
