--- a/how-to-make-indie-film.html
+++ b/how-to-make-indie-film.html
@@ -130,14 +130,22 @@
     <!-- Begin Main -->
     <main class="project style-2">
       <div class="article-wrapper">
+        <p>
+          <span class="subcourseheading"
+            >Complete Guide On Everything from Pre-Production to Editing In
+            Under 2 Hours</span
+          >
+        </p>
         <div class="">
           <p class="courseheading">
             Proven Guide On How To Make A Feature Film On A Budget
           </p>
           <p>
             <span class="subcourseheading"
-              >Complete Guide On Everything from Pre-Production to Editing In
-              Under 2 Hours</span
+              >An ideal course for those who want to focus on every step of
+              filmmaking, from planning, to writing, to filming. An all in one
+              course that covers everything you need to know to make an indie
+              film.</span
             >
           </p>
         </div>
@@ -176,23 +184,29 @@
                 will also learn how to create the appearance of a higher budget
                 film, even with limited resources.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>1.5 hours downloadable video</li>
-                <li>5 downloadable resources</li>
+
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>1.5 hours downloadable video</li>
+                  <li>5 downloadable resources</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>How To Write A Simple Script That Works</li>
-                <li>How To Cast Actors For Indie Films</li>
-                <li>How To Organize Rehearsals</li>
-                <li>How To Find Locations</li>
-                <li>How To Schedule A Shoot The Right Way</li>
-                <li>How To Hire Crew</li>
-                <li>How To Shoot Your Film The Most Efficient Way</li>
-                <li>How To Edit Your Film</li>
-                <li>How To Distribute Your Film</li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ How To Write A Simple Script That Works</li>
+                  <li>✅ How To Cast Actors For Indie Films</li>
+                  <li>✅ How To Organize Rehearsals</li>
+                  <li>✅ How To Find Locations</li>
+                  <li>✅ How To Schedule A Shoot The Right Way</li>
+                  <li>✅ How To Hire Crew</li>
+                  <li>✅ How To Shoot Your Film The Most Efficient Way</li>
+                  <li>✅ How To Edit Your Film</li>
+                  <li>✅ How To Distribute Your Film</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
