--- a/how-to-produce-a-movie.html
+++ b/how-to-produce-a-movie.html
@@ -193,24 +193,29 @@
                 from securing a strong script, to financing and assembling a
                 talented cast and crew.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>40 mins downloadable video</li>
-                <li>2 downloadable resources</li>
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>40 mins downloadable video</li>
+                  <li>2 downloadable resources</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>Know Your Limitations</li>
-                <li>Securing A Story</li>
-                <li>Top Budget Sheet</li>
-                <li>Where To Find Money</li>
-                <li>Producer's Check List</li>
-                <li>Hire The Right Crew</li>
-                <li>Production</li>
-                <li>Post-Production</li>
-                <li>The Film Image</li>
-                <li>Making Your Money Back</li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ Know Your Limitations</li>
+                  <li>✅ Securing A Story</li>
+                  <li>✅ Top Budget Sheet</li>
+                  <li>✅ Where To Find Money</li>
+                  <li>✅ Producer's Check List</li>
+                  <li>✅ Hire The Right Crew</li>
+                  <li>✅ Production</li>
+                  <li>✅ Post-Production</li>
+                  <li>✅ The Film Image</li>
+                  <li>✅ Making Your Money Back</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
