--- a/how-to-write-a-movie.html
+++ b/how-to-write-a-movie.html
@@ -183,23 +183,29 @@
                 and lessons learned, so you can avoid common pitfalls and bring
                 your vision to life.
               </p>
-              <div style="color: white; font-size: 18px">
-                <li>1 hour downloadable video</li>
-                <li>1 downloadable resource</li>
+
+              <div class="what-will-you-learn">
+                <p>Includes:</p>
+                <ul>
+                  <li>1 hour downloadable video</li>
+                  <li>1 downloadable resource</li>
+                </ul>
               </div>
 
-              <ul style="color: white; font-size: 28px">
-                <h1>What Will You Learn:</h1>
-                <li>Screenplay Format And What Software To Use</li>
-                <li>Character Research</li>
-                <li>How To Write A Good Backstory</li>
-                <li>Writing A Solid Beginning, Middle And An End</li>
-                <li>How To Write Great Act I</li>
-                <li>How To Write Great Act II</li>
-                <li>How To Write Great Act III</li>
-                <li>How To Approach Rewrites</li>
-                <li>Screenwriting Tips</li>
-              </ul>
+              <div class="what-will-you-learn">
+                <p>What Will You Learn:</p>
+                <ul>
+                  <li>✅ Screenplay Format And What Software To Use</li>
+                  <li>✅ Character Research</li>
+                  <li>✅ How To Write A Good Backstory</li>
+                  <li>✅ Writing A Solid Beginning, Middle And An End</li>
+                  <li>✅ How To Write Great Act I</li>
+                  <li>✅ How To Write Great Act II</li>
+                  <li>✅ How To Write Great Act III</li>
+                  <li>✅ How To Approach Rewrites</li>
+                  <li>✅ Screenwriting Tips</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
