--- a/how-to-design-a-movie-poster.html
+++ b/how-to-design-a-movie-poster.html
@@ -203,7 +203,7 @@
 
               <div class="what-will-you-learn">
                 <p>What Will You Learn:</p>
-                <ul>
+                <ul class="ul-unstyled">
                   <li>✅ Why Great Poster Is Important</li>
                   <li>✅ What Makes A Great Movie Poster</li>
                   <li>✅ Where To Get Images For Your Film Poster</li>
