--- a/ebook-guide.html
+++ b/ebook-guide.html
@@ -140,20 +140,21 @@
                             Ever wanted to make a film? Learn from my mistakes. In a digital age, you have the tools to make a film, but techniques are very important too. In this book, I'll teach you how to write, shoot, and edit a film with a limited budget and without relying on other people. This book focuses on how to make a feature film in two days. The same techniques and style can be applied to short films too.
                         </p> -->
                         
-                        <ul style="color: white; font-size: 28px; padding: 5%;
-                        ">
-                            <h1>You will learn:</h1>
-                            <li>How To Write A Screenplay For Your Indie Feature Film Quick</li>
-                            <li>How To Schedule Your Shoot</li>
-                            <li>How To Cast Your Film</li>
-                            <li>Rehearsals</li>
-                            <li>Payments. Working With A $5,000 Budget</li>
-                            <li>Working With Actors</li>
-                            <li>How To Do Shooting Schedule That Works</li>
-                            <li>Exploring Best Shooting Style For Low Budget</li>
-                            <li>Working With Crew</li>
-                            <li>Post-production</li>
-                        </ul>
+                        <div class="what-will-you-learn">
+                            <p>What Will You Learn:</p>
+                            <ul>
+                                <li>✅ How To Write A Screenplay For Your Indie Feature Film Quick</li>
+                                <li>✅ How To Schedule Your Shoot</li>
+                                <li>✅ How To Cast Your Film</li>
+                                <li>✅ Rehearsals</li>
+                                <li>✅ Working With Ultra-Low Budget</li>
+                                <li>✅ Working With Actors</li>
+                                <li>✅ How To Do Shooting Schedule That Works</li>
+                                <li>✅ Exploring Best Shooting Style For Low Budget</li>
+                                <li>✅ Working With Crew</li>
+                                <li>✅ Post-production</li>
+                                </ul>
+                          </div>
 
                         <div class="available-section">
                             <h2 class="buy-now-at">Buy Now $2.99</h2>
