--- a/ebook-directing.html
+++ b/ebook-directing.html
@@ -155,7 +155,7 @@
                         </ul> -->
 
                         <div class="available-section">
-                            <h2 class="buy-now-at">Buy Now $2.99</h2>
+                            <h2 class="availableheading">Where To Buy</h2>
                             <a href="https://sowl.co/X2skp" target="_blank" class="buy-now-button">Buy Now</a>
                             <!-- <a href="https://sowl.co/X2skp" target="_blank">
                               <img src="images/buttons/buynow.png" alt="Buy Button" class="available-button">
