--- a/ebook-guide.html
+++ b/ebook-guide.html
@@ -157,7 +157,7 @@
                           </div>
 
                         <div class="available-section">
-                            <h2 class="buy-now-at">Buy Now $2.99</h2>
+                            <h2 class="availableheading">Where To Buy</h2>
                             <a href="https://sowl.co/bfERCm" target="_blank" class="buy-now-button">Buy Now</a>
                             <!-- <a href="https://sowl.co/bfERCm" target="_blank">
                               <img src="images/buttons/buynow.png" alt="Buy Button" class="available-button">
