--- a/how-to-be-a-movie-director.html
+++ b/how-to-be-a-movie-director.html
@@ -148,10 +148,7 @@
 
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
-          <a
-            href="https://sowl.co/s/9tCBe"
-            target="_blank"
-            class="buy-now-button"
+          <a href="https://sowl.co/9tCBe" target="_blank" class="buy-now-button"
             >Buy Now</a
           >
 
