--- a/how-to-make-indie-film.html
+++ b/how-to-make-indie-film.html
@@ -162,7 +162,7 @@
           </div>
           <!-- <h2 class="availableheading">Available at</h2> -->
           <a
-            href="https://sowl.co/s/btbiCS"
+            href="https://sowl.co/btbiCS"
             target="_blank"
             class="buy-now-button"
             >Buy Now</a
