--- a/how-to-produce-a-movie.html
+++ b/how-to-produce-a-movie.html
@@ -150,7 +150,7 @@
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
           <a
-            href="https://sowl.co/s/bwETxv"
+            href="https://sowl.co/bwETxv"
             target="_blank"
             class="buy-now-button"
             >Buy Now</a
