--- a/how-to-write-a-movie.html
+++ b/how-to-write-a-movie.html
@@ -149,10 +149,7 @@
 
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
-          <a
-            href="https://sowl.co/s/m6R6P"
-            target="_blank"
-            class="buy-now-button"
+          <a href="https://sowl.co/m6R6P" target="_blank" class="buy-now-button"
             >Buy Now</a
           >
 
