--- a/reads.html
+++ b/reads.html
@@ -175,7 +175,7 @@
               <a href="https://www.amazon.com/dp/B0BQY1S79R" target="_blank">
                 <figure>
                   <img src="images/books/cover-5.jpg" alt="" />
-                  <div class="best-seller-label">Best Seller</div>
+                  <div class="best-seller-label">Amazon Exclusive</div>
                 </figure>
               </a>
             </div>
