--- a/spooked.html
+++ b/spooked.html
@@ -174,7 +174,7 @@
               <div class="watch-section">
                 <h2 class="watchheading">Where to Watch</h2>
                 <a
-                  href="https://sowl.co/s/bnij3j"
+                  href="https://sowl.co/bnij3j"
                   target="_blank"
                   class="buy-now-button"
                   >Buy Now</a
