--- a/how-to-design-a-movie-poster.html
+++ b/how-to-design-a-movie-poster.html
@@ -147,10 +147,7 @@
 
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
-          <a
-            href="https://sowl.co/s/uBN4U"
-            target="_blank"
-            class="buy-now-button"
+          <a href="https://sowl.co/uBN4U" target="_blank" class="buy-now-button"
             >Buy Now</a
           >
 
