--- a/how-to-edit-a-feature-film.html
+++ b/how-to-edit-a-feature-film.html
@@ -149,10 +149,7 @@
 
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
-          <a
-            href="https://sowl.co/s/4MzyA"
-            target="_blank"
-            class="buy-now-button"
+          <a href="https://sowl.co/4MzyA" target="_blank" class="buy-now-button"
             >Buy Now</a
           >
 
