--- a/store.html
+++ b/store.html
@@ -144,15 +144,16 @@
     <main>
       <div class="portfolio grid three-columns">
         <div class="articles-wrapper">
-          <h2 style="text-align: center; padding-top: 100px">
-            Welcome to the Store
-          </h2>
+          <p class="courseheading">Welcome to the Store</p>
           <article>
             <div class="article-wrapper">
               <a href="/courses.html">
                 <figure>
-                  <img src="images/courses.jpg" alt="" />
+                  <img src="images/courses.png" alt="" />
                 </figure>
+                <a href="courses.html" class="overlay">
+                  <h2 class="title">Courses</h2>
+                </a>
               </a>
             </div>
           </article>
@@ -161,8 +162,11 @@
             <div class="article-wrapper">
               <a href="/movies.html">
                 <figure>
-                  <img src="images/films.jpg" alt="" />
+                  <img src="images/films.png" alt="" />
                 </figure>
+                <a href="movies.html" class="overlay">
+                  <h2 class="title">Films</h2>
+                </a>
               </a>
             </div>
           </article>
@@ -171,8 +175,11 @@
             <div class="article-wrapper">
               <a href="/reads.html">
                 <figure>
-                  <img src="images/ebooks.jpg" alt="" />
+                  <img src="images/ebooks.png" alt="" />
                 </figure>
+              </a>
+              <a href="reads.html" class="overlay">
+                <h2 class="title">e-Books</h2>
               </a>
             </div>
           </article>
