--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -176,14 +176,14 @@
       <div class="inner-container">
         <span class="divider80"></span>
         <!-- <span class="divider80 mobile-hide"></span> -->
-        <span class="divider80 mobile-hide"></span>
+        <!-- <span class="divider80 mobile-hide"></span> -->
 
         <div class="title-title">
           <p>
-            If you can get over my broken English I will help you make your film
+            If you can get over my bad English I will help you make your film
           </p>
-          <h1>1-on-1 Filmmaker Coaching</h1>
-          <p>(1-Hour Zoom Call)</p>
+          <h1>1-on-1 Filmmaker Consultation</h1>
+          <p>(1-Hour 1-On-1 Private Zoom Call)</p>
         </div>
 
         <span class="divider80"></span>
@@ -226,17 +226,9 @@
         </p>
 
         <!-- New  -->
-        <div
-          style="
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            padding: 0;
-            color: white;
-          "
-        >
+        <div class="qna-style">
           <label
-            style="font-size: 20px; font-weight: bold"
+            class="qna-question"
             for="collapsible-1"
             class="collapsible-label"
             >Is this right for me?</label
@@ -257,17 +249,9 @@
           </div>
         </div>
 
-        <div
-          style="
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            padding: 0;
-            color: white;
-          "
-        >
+        <div class="qna-style">
           <label
-            style="font-size: 20px; font-weight: bold"
+            class="qna-question"
             for="collapsible-6"
             class="collapsible-label"
             >Why not just take your course?</label
@@ -294,17 +278,9 @@
           </div>
         </div>
 
-        <div
-          style="
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            padding: 0;
-            color: white;
-          "
-        >
+        <div class="qna-style">
           <label
-            style="font-size: 20px; font-weight: bold"
+            class="qna-question"
             for="collapsible-2"
             class="collapsible-label"
             >Can you only do coaching over Zoom?</label
@@ -324,17 +300,9 @@
           </div>
         </div>
 
-        <div
-          style="
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            padding: 0;
-            color: white;
-          "
-        >
+        <div class="qna-style">
           <label
-            style="font-size: 20px; font-weight: bold"
+            class="qna-question"
             for="collapsible-4"
             class="collapsible-label"
             >Can I get a refund if I need to cancel?</label
@@ -358,17 +326,9 @@
           </div>
         </div>
 
-        <div
-          style="
-            width: 100%;
-            text-align: center;
-            font-size: 16px;
-            padding: 0;
-            color: white;
-          "
-        >
+        <div class="qna-style">
           <label
-            style="font-size: 20px; font-weight: bold"
+            class="qna-question"
             for="collapsible-5"
             class="collapsible-label"
             >What if I have more questions?</label
@@ -391,31 +351,15 @@
           </div>
         </div>
 
-        <div style="padding-bottom: 30px"></div>
+        <!-- <div style="padding-bottom: 30px"></div> -->
 
         <!-- ends -->
 
-        <p
-          style="
-            text-align: center;
-            font-weight: bold;
-            color: white;
-            font-size: 24px;
-            padding-top: 0px;
-            padding-bottom: 0px;
-          "
-        >
-          $300
-        </p>
-        <br />
         <div class="button-wrapper">
-          <a href="https://sowl.co/s/P5c6g" target="_blank" class="book-now-btn"
+          <a href="https://sowl.co/P5c6g" target="_blank" class="book-now-btn"
             >Book Now</a
           >
         </div>
-
-        <br />
-
         <p style="width: 100%; text-align: center; font-size: 12px; padding: 0">
           In the next step you will be able to choose the best date and time for
           your meeting. * You can schedule the meeting up to 30 days in advance.
