--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -222,6 +222,7 @@
             font-weight: bold;
           "
         >
+          <br />
           Q&A
         </p>
 
@@ -245,6 +246,28 @@
               film? If the answer is yes, then this is for you. There's so much
               involved in making an independent film nowadays, and it can be
               confusing and challenging.
+            </p>
+          </div>
+        </div>
+
+        <div class="qna-style">
+          <label
+            class="qna-question"
+            for="collapsible-7"
+            class="collapsible-label"
+            >How much does it cost?</label
+          >
+          <input
+            type="checkbox"
+            id="collapsible-7"
+            class="collapsible-checkbox"
+          />
+
+          <div class="collapsible-content">
+            <p>
+              Currently, it's $300 (USD) for a one-hour private 1-on-1 call.
+              This price includes the time I spend preparing for the call to
+              provide you with the most valuable information.
             </p>
           </div>
         </div>
@@ -283,7 +306,7 @@
             class="qna-question"
             for="collapsible-2"
             class="collapsible-label"
-            >Can you only do coaching over Zoom?</label
+            >Can you only do consultation over Zoom?</label
           >
           <input
             type="checkbox"
